# omnivoice-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/models/: dac.rs  higgs_audio_v2.rs  hubert.rs  mod.rs  omnivoice.rs  qwen3_bidirectional.rs  rvq.rs  semantic_codec.rs  whisper_transcribe.rs
src/utils/: audio.rs  duration.rs  mod.rs  sampling.rs  text.rs  voice_design.rs
