[package]
name = "omnivoice-rs"
version = "0.1.0"
edition = "2021"
description = "OmniVoice TTS inference utility in Rust using Candle"
license = "Apache-2.0"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.22"
hf-hub = "0.5"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
rubato = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
isolang = { version = "2.4", features = ["english_names", "lowercase_names"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
